--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     container_name: confuzz-testbed-producer
     ports:
       - "5051:5000"
+    environment:
+      - PRODUCER_URL=http://localhost:5051
     volumes:
       - ./test-environment/producer:/app
     networks:
